--- a/BigSchool/Views/Courses/Mine.cshtml
+++ b/BigSchool/Views/Courses/Mine.cshtml
@@ -5,6 +5,7 @@
     ViewBag.Title = "Mine";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<h2>Mine</h2>
 
 <div class="row">
     <ul class="course">
