--- a/BigSchool/Views/Courses/Attending.cshtml
+++ b/BigSchool/Views/Courses/Attending.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Attending";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<h2>Attending</h2>
 <div class="row">
     <ul class="course">
         @foreach (var course in Model)
